--- a/Housing Index Graph.ipynb
+++ b/Housing Index Graph.ipynb
@@ -167,12 +167,12 @@
    ],
    "source": [
     "HIndex_merge_df.plot(x = 'Delta')\n",
-    "plt.title('New Private Housing Structures Authorized Before and After Hurricane')\n",
+    "plt.title('Housing Price Index Before and After Hurricane')\n",
     "plt.xlabel('Years Before and After Hurricanes')\n",
-    "plt.ylabel('Housing Authorized')\n",
+    "plt.ylabel('Housing Price Index')\n",
     "plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
     "plt.grid()\n",
-    "plt.savefig('./Graphs/HousingAuthGraph.png')\n"
+    "plt.savefig('./Graphs/HousingPriceIndex.png')\n"
    ]
   },
   {
